- ensure a user can update their details - ensure when a user updates their phone number, they are activated
