# docs/swagger.json
@@ -39,6 +39,40 @@
                 }
             }
         },
+        "/auth/onboard": {
+            "patch": {
+                "description": "Get profile enables a logged in user to update their profile details",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Customers"
+                ],
+                "summary": "Get profile enables a logged in user to update their profile details",
+                "parameters": [
+                    {
+                        "description": "Onboard User",
+                        "name": "customer",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.Onboarding"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.Onboarding"
+                        }
+                    }
+                }
+            }
+        },
         "/auth/profile": {
             "get": {
                 "description": "Get profile gets profile of currently logged in user",
@@ -104,13 +138,22 @@
                 "code": {
                     "type": "string"
                 },
+                "created_at": {
+                    "type": "string"
+                },
                 "email": {
                     "type": "string"
                 },
                 "id": {
                     "type": "integer"
                 },
-                "name": {
+                "phone_number": {
+                    "type": "string"
+                },
+                "status": {
+                    "type": "string"
+                },
+                "username": {
                     "type": "string"
                 }
             }
@@ -119,6 +162,17 @@
             "type": "object",
             "properties": {
                 "redirect": {
+                    "type": "string"
+                }
+            }
+        },
+        "models.Onboarding": {
+            "type": "object",
+            "properties": {
+                "phone_number": {
+                    "type": "string"
+                },
+                "username": {
                     "type": "string"
                 }
             }
